Freedom Sanbox Ant Deploy/src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Balance_No_of_Years__c</fullName>
        <description>years remaining to pay EMI</description>
        <label>Balance No. of Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMI__c</fullName>
        <label>EMI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <label>Financial Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_Floating__c</fullName>
        <label>Fixed /Floating</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_EMI_Month__c</fullName>
        <label>Last EMI Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_EMI_Date__c</fullName>
        <label>Next EMI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_End_Date__c</fullName>
        <label>Premium End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prepayment_terms__c</fullName>
        <label>Prepayment terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Principal_Amount_Outstanding__c</fullName>
        <label>Principal Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemoveCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RemoveCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_No_of_years__c</fullName>
        <label>Term (No. of years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loan</label>
    <nameField>
        <displayFormat>LN-{00000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>